--- a/style.css
+++ b/style.css
@@ -32,10 +32,8 @@ nav {
     width: 15%; 
     height: 100vh;
     line-height: 80px; /*뷰포트의 높이길이에 맞춰 왼쪽 전체 메뉴 */
-    display:flex;
-    align-items:center;
-    justify-content: center;
-    text-align: center;
+    display:flex; /* 레이아웃 배치 */
+    align-items:center; /* 메뉴를 세로로 배치하기 위해 */
     background-color: rgb(19, 55, 29);
 }
 
@@ -55,8 +53,7 @@ nav::after {
 #profile-img {
     width: 90px;
     height: 90px;
-    transform: scale(1); /* 이미지 사이즈 고정 */
-    border-radius: 70%
+    border-radius: 70% /*테두리 둥글게*/
 }
 .nav-menu {
     float: right;
